# MediaDownloader

./: .aiexclude  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  LANGUAGES.md  LzyDownloader.nsi  LzyDownloader.rc  LzyDownloader.rc.in  MediaDownloader.bat  MediaDownloader.nsi  MediaDownloader.rc  MediaDownloaderApp.pyw  README.md  SETTINGS.md  SPEC.md  StartTabCommandPreviewUpdater.h  StartTabUrlHandler.cpp  StartTabUrlHandler.h  TODO.md  UPDATE_AND_RELEASE.md  YT_DLP_Download.py  build_release.ps1  download_binaries.ps1  extractors_gallery-dl.json  extractors_yt-dlp.json  inspect_theme.py  main.cpp  main.pyw  main.spec  mainwindow.cpp  mainwindow.h  pyproject.toml  requirements.txt  update_binaries.ps1  update_gallery-dl_extractors.py  update_runner.py  (+2 more)
core/: app_updater.py  archive_manager.py  binary_manager.py  config_manager.py  download_manager.py  extractor_index.py  file_ops_monitor.py  logger_config.py  playlist_expander.py  playlist_track_tagger.py  sorting_manager.py  update_manager.py  updater.py  version.py  yt_dlp_args_builder.py  yt_dlp_worker.py
hooks/: hook-PyQt6.QtGui.py
ports/pcre2/: portfile.cmake
src/: Aria2Daemon.cpp  Aria2Daemon.h  Aria2DownloadWorker.cpp  Aria2DownloadWorker.h  FfmpegPostProcessor.cpp  FfmpegPostProcessor.h  YtDlpJsonExtractor.cpp  YtDlpJsonExtractor.h
src/core/: AppUpdater.cpp  AppUpdater.h  ArchiveManager.cpp  ArchiveManager.h  Aria2Daemon.cpp  Aria2Daemon.h  ConfigManager.cpp  ConfigManager.h  DownloadFinalizer.cpp  DownloadFinalizer.h  DownloadItem.h  DownloadManager.cpp  DownloadManager.h  DownloadQueueManager.cpp  DownloadQueueManager.h  DownloadQueueState.cpp  DownloadQueueState.h  FfmpegPostProcessor.cpp  FfmpegPostProcessor.h  GalleryDlArgsBuilder.cpp  GalleryDlArgsBuilder.h  GalleryDlUpdater.cpp  GalleryDlUpdater.h  GalleryDlWorker.cpp  GalleryDlWorker.h  LocalApiServer.cpp  LocalApiServer.h  Logger.cpp  Logger.h  MetadataEmbedder.cpp  MetadataEmbedder.h  PlaylistExpander.cpp  PlaylistExpander.h  ProcessUtils.cpp  ProcessUtils.h  SortingManager.cpp  SortingManager.h  StartupWorker.cpp  StartupWorker.h  UpdateStatus.h  (+13 more)
src/core/download_pipeline/: Aria2DownloadWorker.cpp  Aria2DownloadWorker.h  Aria2RpcClient.cpp  Aria2RpcClient.h  FfmpegMuxer.cpp  FfmpegMuxer.h  YtDlpDownloadInfoExtractor.cpp  YtDlpDownloadInfoExtractor.h
src/resources/: convert.py
src/ui/: ActiveDownloadsTab.cpp  ActiveDownloadsTab.h  AdvancedSettingsTab.cpp  AdvancedSettingsTab.h  AdvancedSettingsTab.ui  DownloadItemWidget.cpp  DownloadItemWidget.h  DownloadSectionsDialog.cpp  DownloadSectionsDialog.h  FormatSelectionDialog.cpp  FormatSelectionDialog.h  MainWindow.cpp  MainWindow.h  MainWindowUiBuilder.cpp  MainWindowUiBuilder.h  MissingBinariesDialog.cpp  MissingBinariesDialog.h  RuntimeSelectionDialog.cpp  RuntimeSelectionDialog.h  SortingRuleDialog.cpp  SortingRuleDialog.h  SortingTab.cpp  SortingTab.h  StartTab.cpp  StartTab.h  StartTabUiBuilder.cpp  StartTabUiBuilder.h  SupportedSitesDialog.cpp  SupportedSitesDialog.h  ToggleSwitch.cpp  ToggleSwitch.h  resources.qrc
src/ui/advanced_settings/: AudioSettingsPage.cpp  AudioSettingsPage.h  AuthenticationPage.cpp  AuthenticationPage.h  BinariesPage.cpp  BinariesPage.h  ConfigurationPage.cpp  ConfigurationPage.h  DownloadOptionsPage.cpp  DownloadOptionsPage.h  LivestreamSettingsPage.cpp  LivestreamSettingsPage.h  MetadataPage.cpp  MetadataPage.h  OutputTemplatesPage.cpp  OutputTemplatesPage.h  SubtitlesPage.cpp  SubtitlesPage.h  UpdatesPage.cpp  UpdatesPage.h  VideoSettingsPage.cpp  VideoSettingsPage.h
src/ui/assets/: extractors.json
src/ui/start_tab/: StartTabCommandPreviewUpdater.cpp  StartTabCommandPreviewUpdater.h  StartTabDownloadActions.cpp  StartTabDownloadActions.h  StartTabUrlHandler.cpp
src/utils/: BinaryFinder.cpp  BinaryFinder.h  BrowserUtils.cpp  BrowserUtils.h  ExtractorJsonParser.cpp  ExtractorJsonParser.h  LogManager.cpp  LogManager.h  StringUtils.cpp  StringUtils.h  YtDlpJsonParser.cpp  YtDlpJsonParser.h
tests/: auto_test.py  full_test.py  inspect_queued_titles.py
ui/: __init__.py  main_window.py  tab_active.py  tab_advanced.py  tab_advanced_ui.py  tab_sorting.py  tab_start.py  widgets.py
utils/: cookies.py  validators.py
