[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaDownloader"
version = "0.0.10"
description = "PyQt6 desktop media downloader using yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mutagen==1.47.0",          # For embedding metadata in audio files
    "psutil==7.2.2",            # For process management (e.g., checking running downloads)
    "PyQt6==6.10.2",            # The GUI framework
    "python-dotenv==1.2.1",     # For loading environment variables during development
    "requests==2.32.5",         # For the application self-updater
    "Send2Trash==2.1.0",        # For safely deleting files
    "tendo==0.3.0",             # To ensure only a single instance of the app is running
    "yt-dlp==2026.1.6.233142.dev0", # The core media downloader
    "yt-dlp-ejs==0.3.2",        # Optional dependency for yt-dlp for certain websites
]

[tool.setuptools]
include-package-data = true
